# UBC_Annotated_CV

./: .gitignore  README.md  UBC_CV.aux  UBC_CV.bbl  UBC_CV.blg  UBC_CV.fdb_latexmk  UBC_CV.fls  UBC_CV.run.xml  UBC_CV.tex  _Weber.bib  altcite.py  altmetrics.md  altmetvalues.tex  boldauthors.sh  citationvalues.tex  cite.py  createpdf.sh  githubmetrics.md  githubstats.py  githubvalues.tex  main.py  mycv.bst  mycv.dbj  output.json  pyproject.toml  repos.json  test.bib  vancouver-elife.bst
quarto/: UBC_CV.aux  UBC_CV.qmd  UBC_CV.tex  header.tex
