[project]
name = "cv"
version = "0.1.0"
description = "collect citation information"
authors = [
    {name = "Alex W"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scholar-scraper (>=1.0.11,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
